--- a/docs/doc.css
+++ b/docs/doc.css
@@ -1,8 +1,6 @@
-/*create a canvas*/
-body {
-width=100%
-}
-/*display any photo of johnny brozer from the web as background*/
+<style>
+/*display image as background*/
 body {
 height=100%
 }
+</style>
