--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,4 @@
+<style>
 /* Set height to 100% for body and html to enable the background image to cover the whole page: */
 body, html {
   height: 100%
@@ -50,3 +51,4 @@ hr {
   margin: auto;
   width: 40%;
 }
+</style>
